# TFTP-Client

./: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  main.c  tftp_client.c  tftp_client.h  tftp_gui.c  tftp_gui.h
.github/workflows/: release.yml
